# stm32f0discovery-embassy

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
