[package]
name = "stm32embassy"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = {version = "0.1.0", features =  ["defmt", "time-driver-any", "stm32f051r8", "memory-x", "unstable-pac", "exti"]}
embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
panic-probe = "0.3.2"

[profile.dev]
codegen-units = 1
debug = 0
lto = true
opt-level = "z"

[profile.release]
debug = 2
codegen-units = 1
lto = true
opt-level = "z"